<resources>
    <string name="app_name">Android Lab 3</string>
    <string name="HeaderText">Your Profile</string>
    <string name="input_1_label">Enter Your Email Address</string>
    <string name="input_1_hint">Type Email Here</string>
    <string name="input_2_label">Enter Your Password</string>
    <string name="input_2_hint">Type Password Here</string>
    <string name="button_login">Login</string>

    <string name="input_3_label">Your Name</string>
    <string name="input_3_hint">Enter Your Name</string>
    <string name="input_4_label">Your Email</string>
    <string name="input_4_hint">Enter Your Email</string>
    <string name="input_5_label">Your Picture</string>
    <string name="input_5_hint">Click the button above to take a picture</string>
    <string name="button_chat_text">Go to chat</string>
    <string name="chatRoom_button_send">Send</string>
    <string name="chatRoom_editText_message">Enter Message Here</string>
    <string name="chatRoom_button_receive">Receive</string>
    <string name="chatRoom_alertDialog_title">Remove Message?</string>
    <string name="chatRoom_alertDialog_message">Do you want to delete this?\nThe selected row is: %row%\nThe database id is: %id%</string>
    <string name="chatRoom_alertDialog_yes">Yes</string>
    <string name="chatRoom_alertDialog_no">No</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="detailsFragment_message_text">Message Here</string>
    <string name="detailsFragment_message_id">ID=</string>
    <string name="detailsFragment_sent_message_checkbox">Is a send message</string>
    <string name="detailsFragment_hide_button">Hide</string>
    <string name="button_to_toolbar_text">Go to Toolbar page</string>
    <string name="menuItem_choice1_text">Item 1</string>
    <string name="menuItem_choice2_text">Item 2</string>
    <string name="menuItem_choice3_text">Item 3</string>
    <string name="menuItem_choice4_text">Item 4</string>
    <string name="drawerMenu_navigate_goToChat_text">Chat Page</string>
    <string name="drawerMenu_navigate_goBackToProfile_text">Back To Profile</string>
    <string name="drawerMenu_navigate_text">Navigate</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="headerText">Header Section!</string>
</resources>