<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/HeaderText"
            android:textSize="25dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_3_label" />

        <EditText
            android:id="@+id/input_3_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/input_3_hint" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_4_label" />

        <EditText
            android:id="@+id/input_4_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/input_4_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_5_label" />

        <ImageButton
            android:id="@+id/input_5_picture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@android:drawable/picture_frame">
        </ImageButton>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_5_hint" />

        <Button
            android:id="@+id/button_chat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_chat_text"/>

        <Button
            android:id="@+id/button_to_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_to_toolbar_text"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>