<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsFragment">

    <TextView
        android:id="@+id/detailsFragment_message_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/detailsFragment_message_text" />

    <TextView
        android:id="@+id/detailsFragment_message_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/detailsFragment_message_text"
        android:text="@string/detailsFragment_message_id" />

    <CheckBox
        android:id="@+id/detailsFragment_sent_message_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/detailsFragment_message_id"
        android:text="@string/detailsFragment_sent_message_checkbox" />

    <Button
        android:id="@+id/detailsFragment_hide_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/detailsFragment_hide_button" />

</RelativeLayout>