<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


<!--    <item-->
<!--        android:id="@+id/share_item"-->
<!--        android:title="SHARE" />-->
    <!-- This uses showAsAction=always, so look at icon= parameter -->


<!--    <item-->
<!--        android:id="@+id/app_bar_search"-->
<!--        android:icon="@android:drawable/ic_menu_search"-->
<!--        app:actionViewClass="android.widget.SearchView"-->
<!--        app:showAsAction="always"-->
<!--        android:title="Search" />-->

<!--    <item android:title="SUPPORT">-->
<!--        <menu>-->

<!--            <item-->
<!--                android:id="@+id/mail_item"-->
<!--                android:icon="@android:drawable/sym_action_call"-->
<!--                android:orderInCategory="75"-->
<!--                android:title="MAIL"-->
<!--                app:showAsAction="ifRoom" />-->
<!--        </menu>-->
<!--    </item>-->


    <item android:title="@string/drawerMenu_navigate_text">
        <menu>
            <item
                android:id="@+id/drawerMenu_navigate_goToChat"
                android:orderInCategory="50"
                android:title="@string/drawerMenu_navigate_goToChat_text" />
            <item
                android:id="@+id/drawerMenu_navigate_goBackToProfile"
                android:orderInCategory="80"
                android:title="@string/drawerMenu_navigate_goBackToProfile_text" />
        </menu>
    </item>

</menu>